test/sematest/invalid/new_nonexisting_class.java
class Test {
  public void method() {
    NonEx o = new NonEx();
  }
}
